--- a/starbucks-homepage-main/style2.css
+++ b/starbucks-homepage-main/style2.css
@@ -33,25 +33,132 @@ img{
 .navbar{
     width: 100%;
     height: auto;
+    box-shadow: 0 1px 3px rgb(0 0 0 / 10%), 0 2px 2px rgb(0 0 0 / 6%),
+    0 0 2px rgb(0 0 0 / 7%);
 }
 .navbar-container{
+    max-width: 1440px;
     align-items: center;
+    justify-content: space-between;
     padding: 20px;
     display: flex;
-}
-.navbar-nav-left a{
-    text-transform: uppercase;
-
-}
-.navbar-nav-right img{
-    width: 20px;
-    height: 20px;
-}
-.navbar-container ul{
-    display: flex;
+    margin: 0 auto;
 }
 
 .navbar-brand img{
     width: 50px;
     height: 50px;
+}
+.navbar-nav-left{
+    flex: 1;
+    margin-left: 20px;
+}
+.navbar-nav-left a{
+
+    text-transform: uppercase;
+    font-weight: bold;
+    margin: 0 15px;
+}
+.navbar ul{
+    align-items: center;
+}
+.navbar-nav-left a:hover,.navbar-nav-right span:hover{
+    color: var(--color-primary);
+}
+.navbar-nav-right li:first-child a {
+    display: flex;
+    align-items: center;
+  }
+.navbar-nav-right img{
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+}
+.navbar-nav-right li{
+    margin: 15px;
+} 
+.navbar-container ul{
+    display: flex;
+}
+
+
+
+.text-center{
+    text-align: center;
+}
+.py-md{
+    padding: 20px 0;
+}
+.box{
+    
+}
+
+/*box-a*/
+.box-a{
+    background: var(--color-primary);
+    max-width: 1440px;
+    color: white;
+    margin: 0 auto;
+    display: flex;
+    margin-bottom: 30px;
+}
+.box-inner{
+    margin: 0 auto;
+    max-width: 700px;
+}
+.text-xl{
+    color: white;
+    letter-spacing: 6px;
+    text-transform: uppercase;
+    font-weight: 520;
+    font-size: 50px;
+    margin-bottom: 20px;
+}
+.text-md{
+    color: white;
+    font-size: 24px;
+}
+.text-md a{
+    color: white;
+    text-decoration: underline;
+}
+/*boxB*/
+.box-b{
+    display: flex;
+    max-width: 1440px;
+    margin: 0 auto;
+    background-color: var(--color-secondary);
+}
+.box-text{
+    border: 10px greenyellow solid;
+    width: 720px;
+}
+
+
+
+
+
+/*btn*/
+.btn{
+    border-radius: 50px;
+    cursor: pointer;
+    background: none;
+    border: 1px black solid;
+    padding: 7px 16px;
+    
+}
+.btn-dark{
+    background-color: black;
+    color: white;
+}
+@media(max-width:1440px){
+    
+}
+@media(max-width : 960px){
+    .text-xl{
+        font-size: 30px;
+    }
+    .text-md{
+        font-size: 19px;
+    }
 }
